--- a/views/DangNhap.html
+++ b/views/DangNhap.html
@@ -1,70 +1,87 @@
-</div></div></div></header><div class="theme-supertitle">
+<div class="theme-supertitle">
     <span>Trang thành viên</span>
-  </div><div class="width1200"><div class='hidden-xs'><br><div class="payment_right">
-            <div class="payment_left alignC">Thành viên Đăng nhập/Đăng ký</div>
-            </div>
-            <br><br></div></div>
-
-<div class='hidden-lg' style='margin-top:-20px'>
-            <center>
-            <form action="https://sua.vn/dang-nhap" method="post">
-<div class="col-xs-12 col-sm-12" style="padding-top:30px;"><p><input id='text' type='text' placeholder='Email / Số điện thoại' value='' name='email' class='form-control'></p><p><input id="password" type="password" value="" name="user_password" class='form-control' placeholder='Mật mã '></p><div class="form_buy_item" style="margin-top: 5px; *margin-top: 20px;" align="left">Ghi nhớ <input type="checkbox" name="remember" value="1"></div><input type="hidden" name="redirect" value=>
-<input type="hidden" name="mode" value=>
-<input type="hidden" name="f" value=>
-<input type="hidden" name="t" value=>
-<input type="hidden" name="op" value="login">
-<br></div>
-            
-                <button type='submit' class='btn btn-primary'>Đăng nhập</button>
-            
-            <div class='clearfix' style='margin-bottom:20px'></div>	
-            
-            </form></center><center> <div class="nor" style='margin-bottom:30px'><a href="quen-mat-khau.html" class="normal">Quên mật khẩu?</a> | <a href="dang-ky-thanh-vien.html" class="normal">Đăng ký mới</a></div> 
-            </center>
-        </div><div class='hidden-xs'>
-
-            <div class='width1200'>
-            
-                <div class='col-md-3'></div>
-
-                <div class='col-md-6'><form action="https://sua.vn/dang-nhap" method="post"><table class="table mantable">
-                            <tr>
-                                <td>Email / Số điện thoại</td>
-
-                                <td>
-                                    <input id="email" type="text" name="email" class="form-control">
-                                </td>
-                            </tr>
-
-
-                            <tr>
-                                <td>Mật mã </td>
-
-                                <td>
-                                    <input id="password" type="password" name="user_password" class="form-control">
-                                </td>
-                            </tr><tr>
-                                <td></td>
-
-                                <td>Ghi nhớ 
-                                    <input type="checkbox" name="remember" value="1">
-                                </td></tr><input type="hidden" name="redirect" value=>
-<input type="hidden" name="mode" value=>
-<input type="hidden" name="f" value=>
-<input type="hidden" name="t" value=>
-<input type="hidden" name="op" value="login">
-<br>
-
-                            <tr>
-                                <td></td>
-                                <td>
-                                    <button type='submit' class='btn btn-primary' style='margin-right:10px'>Đăng nhập</button>
-
-                                    <button type='reset' class='btn'>Nhập lại</button>
-                                </td>
-                            </tr></table></form><center> 
-                        <div class="nor"><a href="quen-mat-khau.html" class="normal">Quên mật khẩu?</a> | <a href="dang-ky-thanh-vien.html" class="normal">Đăng ký mới</a>
-                        </div> 
-                    </center></div><div class='col-md-3'></div><div class='clearfix'></div></div></div>
 </div>
+<div class="width1200">
+    <div class="hidden-xs">
+        <br />
+        <div class="payment_right">
+            <div class="payment_left alignC">Thành viên Đăng nhập/Đăng ký</div>
+        </div>
+        <br />
+        <br />
+    </div>
+</div>
+
+<div class="hidden-lg" style="margin-top: -20px;">
+    <center>
+        <form action="https://sua.vn/dang-nhap" method="post">
+            <div class="col-xs-12 col-sm-12" style="padding-top: 30px;">
+                <p><input id="text" type="text" placeholder="Email / Số điện thoại" value="" name="email" class="form-control" /></p>
+                <p><input id="password" type="password" value="" name="user_password" class="form-control" placeholder="Mật mã " /></p>
+                <div class="form_buy_item" style="margin-top: 5px; *margin-top: 20px;" align="left">Ghi nhớ <input type="checkbox" name="remember" value="1" /></div>
+                <input type="hidden" name="redirect" value=> <input type="hidden" name="mode" value=> <input type="hidden" name="f" value=> <input type="hidden" name="t" value=>
+                <input type="hidden" name="op" value="login" />
+                <br />
+            </div>
+
+            <button type="submit" class="btn btn-primary">Đăng nhập</button>
+
+            <div class="clearfix" style="margin-bottom: 20px;"></div>
+        </form>
+    </center>
+    <center>
+        <div class="nor" style="margin-bottom: 30px;"><a href="quen-mat-khau.html" class="normal">Quên mật khẩu?</a> | <a href="dang-ky-thanh-vien.html" class="normal">Đăng ký mới</a></div>
+    </center>
+</div>
+<div class="hidden-xs">
+    <div class="width1200">
+        <div class="col-md-3"></div>
+
+        <div class="col-md-6">
+            <form action="https://sua.vn/dang-nhap" method="post">
+                <table class="table mantable">
+                    <tr>
+                        <td>Email / Số điện thoại</td>
+
+                        <td>
+                            <input id="email" type="text" name="email" class="form-control" />
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>Mật mã</td>
+
+                        <td>
+                            <input id="password" type="password" name="user_password" class="form-control" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
+
+                        <td>
+                            Ghi nhớ
+                            <input type="checkbox" name="remember" value="1" />
+                        </td>
+                    </tr>
+                    <input type="hidden" name="redirect" value=> <input type="hidden" name="mode" value=> <input type="hidden" name="f" value=> <input type="hidden" name="t" value=>
+                    <input type="hidden" name="op" value="login" />
+                    <br />
+
+                    <tr>
+                        <td></td>
+                        <td>
+                            <button type="submit" class="btn btn-primary" style="margin-right: 10px;">Đăng nhập</button>
+
+                            <button type="reset" class="btn">Nhập lại</button>
+                        </td>
+                    </tr>
+                </table>
+            </form>
+            <center>
+                <div class="nor"><a href="quen-mat-khau.html" class="normal">Quên mật khẩu?</a> | <a href="dang-ky-thanh-vien.html" class="normal">Đăng ký mới</a></div>
+            </center>
+        </div>
+        <div class="col-md-3"></div>
+        <div class="clearfix"></div>
+    </div>
 </div>
