--- a/views/layout.html
+++ b/views/layout.html
@@ -1,93 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="resource-type" content="document" />
+        <meta name="distribution" content="global" />
+        <meta name="author" content="SUA.VN Siêu thị sữa - Thế giới sữa chính hãng không lo hàng giả" />
+        <meta name="copyright" content="Copyright (c) 2024 by SUA.VN Siêu thị sữa" />
+        <meta name="robots" content="index, follow" />
+        <meta name="revisit-after" content="1 days" />
+        <meta name="rating" content="general" />
+        <meta name="keywords" content="sua bot, sữa bột, sữa bột cho bé, sua physiolac, sieu thi sua, sua pediasure, sua nuti, sua xo, sua biomilk, sua nan, sua ensure, sua friso, sua anfa" />
+        <meta name="description" content="Mua bán Sữa bột giá tốt  - Sua.vn - Siêu thị sữa - Thế giới sữa , cung cấp sữa bột từ các nhà cung cấp hàng đầu." />
+        <meta property="og:description" content="Mua bán Sữa bột giá tốt - Sua.vn - Siêu thị sữa - Thế giới sữa." />
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="SUA.VN Siêu thị sữa - Thế giới sữa chính hãng không lo hàng giả" />
+        <meta property="og:image" content="https://sua.vn/themes/sua/images/logo-suavn.png" />
+        <meta property="og:image:width" content="50" />
+        <meta property="og:image:height" content="40" />
+        <title>SUA.VN Siêu thị sữa - Thế giới sữa chính hãng không lo hàng giả | Trang chủ | Home</title>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="resource-type" content="document">
-    <meta name="distribution" content="global">
-    <meta name="author" content="SUA.VN Siêu thị sữa - Thế giới sữa chính hãng không lo hàng giả">
-    <meta name="copyright" content="Copyright (c) 2024 by SUA.VN Siêu thị sữa">
-    <meta name="robots" content="index, follow">
-    <meta name="revisit-after" content="1 days">
-    <meta name="rating" content="general">
-    <meta name="keywords" content="sua bot, sữa bột, sữa bột cho bé, sua physiolac, sieu thi sua, sua pediasure, sua nuti, sua xo, sua biomilk, sua nan, sua ensure, sua friso, sua anfa">
-    <meta name="description" content="Mua bán Sữa bột giá tốt  - Sua.vn - Siêu thị sữa - Thế giới sữa , cung cấp sữa bột từ các nhà cung cấp hàng đầu.">
-    <meta property="og:description" content="Mua bán Sữa bột giá tốt - Sua.vn - Siêu thị sữa - Thế giới sữa.">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="SUA.VN Siêu thị sữa - Thế giới sữa chính hãng không lo hàng giả">
-    <meta property="og:image" content="https://sua.vn/themes/sua/images/logo-suavn.png">
-    <meta property="og:image:width" content="50">
-    <meta property="og:image:height" content="40">
-    <title>SUA.VN Siêu thị sữa - Thế giới sữa chính hãng không lo hàng giả | Trang chủ | Home</title>
+        <link rel="stylesheet" href="themes/sua/style/bootstrap3/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="js/slick/slick.min.css" />
+        <link rel="stylesheet" href="themes/sua/style/sua.css" />
+        <link rel="stylesheet" href="themes/sua/style/font-awesome-4-7/css/font-awesome.css" />
+        <link rel="stylesheet" href="js/specialeventco/owl.carousel.css" />
+        <link rel="stylesheet" href="js/fancybox3/jquery.fancybox.min.css" />
+        <link rel="stylesheet" href="themes/sua/style/edit.css" />
 
-    <link rel="stylesheet" href="themes/sua/style/bootstrap3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="js/slick/slick.min.css">
-    <link rel="stylesheet" href="themes/sua/style/sua.css">
-    <link rel="stylesheet" href="themes/sua/style/font-awesome-4-7/css/font-awesome.css">
-    <link rel="stylesheet" href="js/specialeventco/owl.carousel.css">
-    <link rel="stylesheet" href="js/fancybox3/jquery.fancybox.min.css">
-    <link rel="stylesheet" href="themes/sua/style/edit.css">
+        <script src="themes/sua/script/jquery-1.10.2.js"></script>
+        <script src="themes/sua/style/bootstrap3/js/bootstrap.min.js"></script>
+        <script src="js/slick/slick.min.js"></script>
+        <script src="js/specialeventco/isotope.min.js"></script>
+        <script src="js/specialeventco/owl.carousel.min.js"></script>
+        <script src="js/specialeventco/functions.js"></script>
+        <script src="js/fancybox3/jquery.fancybox.min.js"></script>
+        <script src="js/lazyload.js"></script>
 
-    <script src="themes/sua/script/jquery-1.10.2.js"></script>
-    <script src="themes/sua/style/bootstrap3/js/bootstrap.min.js"></script>
-    <script src="js/slick/slick.min.js"></script>
-    <script src="js/specialeventco/isotope.min.js"></script>
-    <script src="js/specialeventco/owl.carousel.min.js"></script>
-    <script src="js/specialeventco/functions.js"></script>
-    <script src="js/fancybox3/jquery.fancybox.min.js"></script>
-    <script src="js/lazyload.js"></script>
+        <script>
+            function AutoRefresh(t) {
+                setTimeout("location.reload(true);", t);
+            }
+        </script>
+    </head>
 
-    <script>
-        function AutoRefresh(t) {
-            setTimeout("location.reload(true);", t);
-        }
-    </script>
-</head>
+    <body onload="AutoRefresh(10000);" class="xxxbody">
+        <a class="phone_backtotop" title="Gọi ngay  0782222762" href="tel:0782222762">
+            <img src="themes/sua/images/phone_backtotop.png" alt="Phone Back to Top" />
+        </a>
 
-<body onload="AutoRefresh(10000);" class="xxxbody">
-    <a class="phone_backtotop" title="Gọi ngay  0782222762" href="tel:0782222762">
-        <img src="themes/sua/images/phone_backtotop.png" alt="Phone Back to Top">
-    </a>
-
-    <header class="header">
-        <div class="header__top">
-            <div class="slide-top">
-                <div class='item' style='background:#347E8B'>
-                    <section>
-                        <a href='#347E8B'>
-                            <img title='slide top' alt='slide top' src="uploads/logo/1718618592.png">
-                        </a>
-                    </section>
-                </div>
-                <div class='item' style='background:#F5E291'>
-                    <section>
-                        <a href='#F5E291'>
-                            <img title='slide top2' alt='slide top2' src="uploads/logo/1718618602.png">
-                        </a>
-                    </section>
-                </div>
-                <div class='item' style='background:#FFE9EC'>
-                    <section>
-                        <a href='#FFE9EC'>
-                            <img title='slide top2' alt='slide top2' src="uploads/logo/1718618613.png">
-                        </a>
-                    </section>
+        <header class="header">
+            <div class="header__top">
+                <div class="slide-top">
+                    <div class="item" style="background: #347e8b;">
+                        <section>
+                            <a href="#347E8B">
+                                <img title="slide top" alt="slide top" src="uploads/logo/1718618592.png" />
+                            </a>
+                        </section>
+                    </div>
+                    <div class="item" style="background: #f5e291;">
+                        <section>
+                            <a href="#F5E291">
+                                <img title="slide top2" alt="slide top2" src="uploads/logo/1718618602.png" />
+                            </a>
+                        </section>
+                    </div>
+                    <div class="item" style="background: #ffe9ec;">
+                        <section>
+                            <a href="#FFE9EC">
+                                <img title="slide top2" alt="slide top2" src="uploads/logo/1718618613.png" />
+                            </a>
+                        </section>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        {{header}}
-        {{content}}
-        {{footer}}
-    </header>
+            {{header}} {{content}} {{footer}}
+        </header>
 
-    <div class="muahangthanhcong"></div>
+        <div class="muahangthanhcong"></div>
 
-    <script src="js/owl-carousel-title/owl.carousel.min.js"></script>
-    <script src="js/owl-carousel-title/devvn_main.js"></script>
-    <script src="js/my.js"></script>
-    <script src="js/data.js"></script>
-</body>
-
+        <script src="js/owl-carousel-title/owl.carousel.min.js"></script>
+        <script src="js/owl-carousel-title/devvn_main.js"></script>
+        <script src="js/my.js"></script>
+        <script src="js/data.js"></script>
+    </body>
 </html>
