--- a/views/SanPham.html
+++ b/views/SanPham.html
@@ -3,7 +3,7 @@
         <div class="width1200">
             <div class="page-cats">
                 <a href="SUA-BOT-DINH-DUONG-128SP.html" class="mod_title">SỮA BỘT DINH DƯỠNG</a>
-                <i class='fa fa-angle-double-right'></i>
+                <i class="fa fa-angle-double-right"></i>
                 <a href="NEOCARE-248Sp.html" class="mod_title">NEOCARE</a>
                 <i class="fa fa-angle-double-right"></i>
                 <a href="Sua-bot-194Sp.html" class="mod_title">Sữa bột</a>
@@ -14,7 +14,7 @@
                         <div>
                             <h3 class="shoppic posR">
                                 <a data-fancybox="gallery2472" data-caption="Sữa bột NeoCare pedia 900g (1-10 tuổi) tặng 2 lọ yến sào khi mua 1 lon" href="uploads/shop/pic/1652670266.nv.jpg">
-                                    <img src="uploads/shop/pic/1652670266.nv.jpg">
+                                    <img src="uploads/shop/pic/1652670266.nv.jpg" />
                                 </a>
                             </h3>
                         </div>
@@ -22,7 +22,7 @@
                     <div class="slider slider-nav">
                         <div>
                             <h3 class="more-picshop">
-                                <img src="uploads/shop/pic/1652670266.nv.jpg" width="280" height="280">
+                                <img src="uploads/shop/pic/1652670266.nv.jpg" width="280" height="280" />
                             </h3>
                         </div>
                     </div>
@@ -41,19 +41,19 @@
                         <div class="product-variants">
                             <label for="variant-select">Chọn biến thể:</label>
                             <div class="variant-images">
-                                <img src="uploads/shop/pic/small_1719570127.nv.jpg" alt="Biến thể 900g" data-variant="900g" class="variant-thumbnail">
-                                <img src="uploads/shop/pic/small_1719570127.nv.jpg" alt="Biến thể 400g" data-variant="400g" class="variant-thumbnail">
-                                <img src="uploads/shop/pic/small_1719484066.nv.jpg" alt="Biến thể 200g" data-variant="200g" class="variant-thumbnail">
+                                <img src="uploads/shop/pic/small_1719570127.nv.jpg" alt="Biến thể 900g" data-variant="900g" class="variant-thumbnail" />
+                                <img src="uploads/shop/pic/small_1719570127.nv.jpg" alt="Biến thể 400g" data-variant="400g" class="variant-thumbnail" />
+                                <img src="uploads/shop/pic/small_1719484066.nv.jpg" alt="Biến thể 200g" data-variant="200g" class="variant-thumbnail" />
                             </div>
                         </div>
                     </div>
                     <div class="details-pay">
                         <a href="javascript:void(0)" class="buynow" data-pid="2472" data-sl="1">
-                            <img src="themes/sua/images/muangay.jpg">
+                            <img src="themes/sua/images/muangay.jpg" />
                         </a>
                         --- Hoặc ---
                         <a href="javascript:void(0)" class="buy-fast" data-pid="2472" data-sl="1">
-                            <img src="themes/sua/images/ThemVaoGioHang.jpg">
+                            <img src="themes/sua/images/ThemVaoGioHang.jpg" />
                         </a>
                     </div>
                 </div>
@@ -87,25 +87,25 @@
                         <div class="details-khuyenmai">
                             <div class="bg-khuyenmai Kmpic">
                                 <a href="Khuyen-mai-tu-sua-Danmilko-441km.html">
-                                    <img src="uploads/News/pic/1724213426.nv.jpg">
+                                    <img src="uploads/News/pic/1724213426.nv.jpg" />
                                     <p>Khuyến mãi từ sữa Danmilko</p>
                                 </a>
                             </div>
                             <div class="bg-khuyenmai Kmpic">
                                 <a href="Trung-thu-ron-rang-qua-tang-ngap-tran-440km.html">
-                                    <img src="uploads/News/pic/1724203436.nv.jpg">
+                                    <img src="uploads/News/pic/1724203436.nv.jpg" />
                                     <p>Trung thu rộn ràng quá tặng ngập tràn</p>
                                 </a>
                             </div>
                             <div class="bg-khuyenmai Kmpic">
                                 <a href="Khuyen-mai-tu-sua-Morinaga-438km.html">
-                                    <img src="uploads/News/pic/1719473887.nv.jpg">
+                                    <img src="uploads/News/pic/1719473887.nv.jpg" />
                                     <p>Khuyến mãi từ sữa Morinaga</p>
                                 </a>
                             </div>
                             <div class="bg-khuyenmai Kmpic">
                                 <a href="Khuyen-mai-tu-Enfamama-434km.html">
-                                    <img src="uploads/News/pic/1702518108.nv.jpg">
+                                    <img src="uploads/News/pic/1702518108.nv.jpg" />
                                     <p>Khuyến mãi từ Enfamama</p>
                                 </a>
                             </div>
@@ -121,7 +121,7 @@
     <div class="hidden-xs">
         <div class="web-footer">
             <div class="foot-1">
-                <img src="themes/sua/images/foot-1.jpg" alt="thông tin" title="thông tin">
+                <img src="themes/sua/images/foot-1.jpg" alt="thông tin" title="thông tin" />
             </div>
         </div>
     </div>
