--- a/views/index.html
+++ b/views/index.html
@@ -373,3 +373,19 @@
         </div>
     </div>
 </section>
+<div class="top_slogan w-100 align-items-center " style="--clcont: #ffffff;--bg_line_1: #71c3ab;--bg_line_2: #6568a0; display: none">
+    <div class="container h-100">
+        <div class="zozo_text_fade swiper-container h-100">
+            <div class="swiper-wrapper">
+                                    <div class="swiper-slide text-center">
+                        <a class="font-weight-bold d-flex justify-content-center align-items-center h-100 w-100" href="#" title="Tặng quà hấp dẫn cho bé. Mua hàng ngay đừng bỏ lỡ.">
+                            <span class="pulsingButton mr-3 bg-white d-inline-block rounded-circle"></span>Tặng quà hấp dẫn cho bé. Mua hàng ngay đừng bỏ lỡ.                        </a>
+                    </div>
+                                    <div class="swiper-slide text-center">
+                        <a class="font-weight-bold d-flex justify-content-center align-items-center h-100 w-100" href="#" title="Free ship tất cả các đơn hàng từ 299k">
+                            <span class="pulsingButton mr-3 bg-white d-inline-block rounded-circle"></span>Free ship tất cả các đơn hàng từ 299k                        </a>
+                    </div>
+                            </div>
+        </div>
+    </div>
+</div>
