--- a/views/layout.html
+++ b/views/layout.html
@@ -7,65 +7,76 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="theme-color" content="#FFFFFF" />
     <title>Vshop - Mẫu thiết kế tối ưu cho các sản phẩm quần áo trẻ em và đa dạng các loại hàng hóa khác</title>
-    <base />
-    <meta name="description" content="Vshop - Mẫu thiết kế tối ưu cho các sản phẩm quần áo trẻ em và đa dạng các loại hàng hóa khác" />
-    <meta property="og:url" content="index.html" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Vshop - Mẫu thiết kế tối ưu cho các sản phẩm quần áo trẻ em và đa dạng các loại hàng hóa khác" />
-    <meta property="og:description" content="Vshop - Mẫu thiết kế tối ưu cho các sản phẩm quần áo trẻ em và đa dạng các loại hàng hóa khác" />
-    <meta property="image:alt" content="Vshop - Mẫu thiết kế tối ưu cho các sản phẩm quần áo trẻ em và đa dạng các loại hàng hóa khác" />
-    <meta property="og:image" content="image/catalog/vmart/logo/StyleVertical.html" />
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:description" content="Vshop - Mẫu thiết kế tối ưu cho các sản phẩm quần áo trẻ em và đa dạng các loại hàng hóa khác" />
-    <meta name="twitter:title" content="Vshop - Mẫu thiết kế tối ưu cho các sản phẩm quần áo trẻ em và đa dạng các loại hàng hóa khác" />
-    <meta name="twitter:image" content="image/catalog/vmart/logo/StyleVertical.html" />
-    <meta name="robots" content="index, follow, noodp, noydir" />
-    
+    <base  />
+        <meta name="description" content="Vshop - Mẫu thiết kế tối ưu cho các sản phẩm quần áo trẻ em và đa dạng các loại hàng hóa khác" />
+                <meta property="og:url" content="index.html" />
+                <meta property="og:type" content="website" />
+                <meta property="og:title" content="Vshop - Mẫu thiết kế tối ưu cho các sản phẩm quần áo trẻ em và đa dạng các loại hàng hóa khác" />
+                <meta property="og:description" content="Vshop - Mẫu thiết kế tối ưu cho các sản phẩm quần áo trẻ em và đa dạng các loại hàng hóa khác" />
+                <meta property="image:alt" content="Vshop - Mẫu thiết kế tối ưu cho các sản phẩm quần áo trẻ em và đa dạng các loại hàng hóa khác" />
+                <meta property="og:image" content="image/catalog/vmart/logo/StyleVertical.html" />
+                <meta name="twitter:card" content="summary" />
+                <meta name="twitter:description" content="Vshop - Mẫu thiết kế tối ưu cho các sản phẩm quần áo trẻ em và đa dạng các loại hàng hóa khác" />
+                <meta name="twitter:title" content="Vshop - Mẫu thiết kế tối ưu cho các sản phẩm quần áo trẻ em và đa dạng các loại hàng hóa khác" />
+                <meta name="twitter:image" content="image/catalog/vmart/logo/StyleVertical.html" />
+                <meta name="robots" content="index, follow, noodp, noydir" />
+        
     <link rel="icon" href="image/catalog/logo/VShopFavicon.png" />
-    <link href="index.html" rel="canonical" />
-    <link rel="stylesheet" href="/catalog/view/theme/default/stylesheet/account/login_v2.css" />
-    <link href="catalog/view/theme/default/stylesheet/news_custom.css" type="text/css" rel="stylesheet" media="screen"/>
-    <link href="catalog/view/theme/vshop/stylesheet/setting_colorc03d.css?1635817336" type="text/css" rel="stylesheet" media="screen"/>
-    <link href="catalog/view/theme/default/stylesheet/product_option.css" type="text/css" rel="stylesheet" media="screen"/>
+    
+        <script type="application/ld+json">
+    </script>
+          
+        <link href="image/catalog/logo/VShopFavicon.png" rel="icon" />
+        <link href="index.html" rel="canonical" />
+        <link rel="stylesheet" href="/catalog/view/theme/default/stylesheet/account/login_v2.css" />
+            <link href="catalog/view/theme/default/stylesheet/news_custom.css" type="text/css" rel="stylesheet"
+              media="screen"/>
+            <link href="catalog/view/theme/vshop/stylesheet/setting_colorc03d.css?1635817336" type="text/css" rel="stylesheet"
+              media="screen"/>
+            <link href="catalog/view/theme/default/stylesheet/product_option.css" type="text/css" rel="stylesheet"
+              media="screen"/>
+              <link rel="stylesheet" href="/css/style.js">
+              <link rel="stylesheet" href="/js/dataaa.js">
+    <link rel="preload" as="style" href="catalog/view/theme/vshop/stylesheet/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="catalog/view/theme/vshop/stylesheet/bootstrap.min.css">
+    <link rel="stylesheet" href="catalog/view/theme/default/stylesheet/checkout/cart.css">
     <link rel="preload" as="style" href="catalog/view/theme/vshop/stylesheet/swiper.scss.css" type="text/css">
     <link rel="preload" as="style" href="catalog/view/theme/vshop/stylesheet/zozo_style_gb.scss.css" type="text/css">
     <link href="catalog/view/theme/vshop/stylesheet/swiper.scss.css" rel="stylesheet">
     <link href="catalog/view/theme/vshop/stylesheet/zozo_style_gb.scss.css" rel="stylesheet">
     <link href="catalog/view/theme/vshop/stylesheet/jquery.raty.css" rel="stylesheet">
-    
-    <script type="text/javascript" src="catalog/view/theme/vshop/javascript/jquery-3.3.1.min2989.js?v=1635817336"></script>
-    <link href="catalog/view/theme/vshop/stylesheet_custom/stylesheet2989.css?v=1635817336" rel="stylesheet" />
-    
-    <link rel="preload" as="style" href="catalog/view/theme/vshop/stylesheet/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="catalog/view/theme/vshop/stylesheet/bootstrap.min.css">
     <link rel="preload" as="style" href="catalog/view/theme/vshop/stylesheet/product_style.scss.css" type="text/css">
-    <link href='catalog/view/theme/vshop/stylesheet/product_style.scss.css' rel='stylesheet' type='text/css' media='all'/>
+    <link href='catalog/view/theme/vshop/stylesheet/product_style.scss.css' rel='stylesheet' type='text/css'  media='all'  />
     <link rel="stylesheet" type="text/css" href="catalog/view/theme/vshop/stylesheet/lightgallery.css" />
-    <link rel="stylesheet" href="catalog/view/theme/default/stylesheet/checkout/cart.css">
+    <link rel="stylesheet" type="text/css" href="catalog/view/theme/vshop/stylesheet/product_style.scss.css" />
+    
     <script type="text/javascript" src="catalog/view/theme/vshop/javascript/lightgallery.js"></script>
     <script src="catalog/view/theme/vshop/javascript/zozo_product.js" defer></script>
     
-    <link rel="stylesheet" type="text/css" href="catalog/view/theme/default/stylesheet/review/review.css" />
-    <script type="text/javascript" src="catalog/view/theme/default/javascript/review/review.js"></script>
+        <link rel="stylesheet" type="text/css" href="catalog/view/theme/default/stylesheet/review/review.css" />
+        <script type="text/javascript" src="catalog/view/theme/default/javascript/review/review.js"></script>
     
     <script type="text/javascript" src="catalog/view/theme/vshop/javascript/jquery-3.3.1.min2989.js?v=1635817336"></script>
     <link href="catalog/view/theme/vshop/stylesheet_custom/stylesheet2989.css?v=1635817336" rel="stylesheet" />
 </head>
 
 <body class="common-home">
+  
     {{header}}
-    {{content}}
-    {{footer}}
-    <script type="text/javascript" src="catalog/view/theme/vshop/javascript/bootstrap.min.js"></script>
-    <script type="text/javascript" src="catalog/view/theme/vshop/javascript/swiper-bundle.min.js"></script>
-    <script type="text/javascript" src="catalog/view/theme/vshop/javascript/common.js"></script>
-    <script type="text/javascript" src="catalog/view/theme/vshop/javascript/zozo_one.js" defer></script>
-    <script type="text/javascript" src="catalog/view/theme/vshop/javascript/zozotab.js" defer></script>
-    <script type="text/javascript" src="catalog/view/theme/vshop/javascript/main.js"></script>
-    <script src="catalog/view/theme/default/javascript/news_custom.js" type="text/javascript"></script>
-    <script src="catalog/view/theme/default/javascript/product_option.js" type="text/javascript"></script>
-    <div id="fb-root"></div>
-    <script type="text/javascript">
-    </script>
+  {{content}}
+ {{footer}}
+<script type="text/javascript" src="catalog/view/theme/vshop/javascript/bootstrap.min.js"></script>
+<script type="text/javascript" src="catalog/view/theme/vshop/javascript/swiper-bundle.min.js"></script>
+<script type="text/javascript" src="catalog/view/theme/vshop/javascript/bootstrap.min.js"></script>
+<script type="text/javascript" src="catalog/view/theme/vshop/javascript/common.js"></script>
+<script type="text/javascript" src="catalog/view/theme/vshop/javascript/zozo_one.js" defer></script>
+<script type="text/javascript" src="catalog/view/theme/vshop/javascript/zozotab.js" defer></script>
+<script type="text/javascript" src="catalog/view/theme/vshop/javascript/main.js"></script>
+<script src="catalog/view/theme/default/javascript/news_custom.js" type="text/javascript"></script>
+<script src="catalog/view/theme/default/javascript/product_option.js" type="text/javascript"></script>
+<div id="fb-root"></div>
+<script type="text/javascript">
+
+</script>
 </body>
 </html>
